--- a/calebwiki.html
+++ b/calebwiki.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CalebWiki</title>
+    <title>Wiki of Belac/Caleb and Mike</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: url('Background.jpg') no-repeat center center fixed; /* For a background image */
+            background: url('background.jpg') no-repeat center center fixed; /* For a background image */
             background-size: cover; /* Ensure the background covers the entire page */
             /* background-color: #f0f0f0; */ /* Uncomment this line if you prefer a solid color background */
             margin: 0;
@@ -18,7 +19,7 @@
             width: 80%;
             margin: auto;
             overflow: hidden;
-            background: rgba(170, 0, 0, 0.8); /* White background with some transparency for readability */
+            background: rgba(255, 255, 255, 0.8); /* White background with some transparency for readability */
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -46,7 +47,7 @@
 
         nav a {
             text-decoration: none;
-            color: #740000;
+            color: #0066cc;
             font-weight: bold;
         }
 
@@ -58,7 +59,7 @@
             display: none;
             margin-bottom: 40px;
             padding: 20px;
-            background: rgba(148, 0, 0, 0.9); /* Slightly more opaque for better readability */
+            background: rgba(255, 255, 255, 0.9); /* Slightly more opaque for better readability */
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
@@ -92,7 +93,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>CalebWiki</h1>
+        <h1>Welcome to the Wiki of Belac/Caleb and Mike</h1>
         <nav>
             <ul>
                 <li><a href="#" onclick="showPerson('belac-caleb')">Belac/Caleb</a></li>
@@ -101,21 +102,13 @@
         </nav>
         <section id="belac-caleb" class="person-section">
             <h2>Belac/Caleb</h2>
-            <img src="caleb.jpg" alt="Belac/Caleb Image 1">
-            <div class="image-container">
-                <img src="caleb2.jpg" alt="Belac/Caleb Image 2">
-                <div class="before-text">BEFORE</div>
-            </div>
-            <h1>Caleb was a cool programmer, but a sprit possessed him and toke over him so he roams maryland looking for a victim...</h1>
+            <img src="caleb.jpg" alt="Belac/Caleb Image">
+            <p>Information about Belac/Caleb...</p>
         </section>
         <section id="mike" class="person-section">
             <h2>Mike</h2>
-            <img src="mike.jpg" alt="Mike Image 1">
-            <div class="image-container">
-                <img src="mike3.jpg" alt="Mike Image 2">
-                <div class="before-text">BEFORE</div>
-            </div>
-            <h1>Mike was a loud, funny person and loved games until Belac got possessed and now he runs looking for someone who survived but then Caleb found him...</h1>
+            <img src="mike.jpg" alt="Mike Image">
+            <p>Information about Mike...</p>
         </section>
     </div>
     <script>
